k8s/mysql/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: prod-ns
  labels:
    env: prod
    app: flaskapp
