k8s/mysql/mysql-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql-svc
  namespace: prod-ns
spec:
  selector:
    env: prod
    app: mysql
  ports:
    - port: 3306
      targetPort: 3306
  clusterIP: None
