k8s/mysql/db-conn-np.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: prod-ns  
spec:
  podSelector: {}           
  policyTypes:
  - Ingress
  - Egress
